<resources>
    <string name="app_name">Riconvert</string>
    <string name="hasil_convert">Hasil</string>
    <string name="formatKonversi">%1$.2f</string>
    <string name="desc">Aplikasi konversi mata uang Rupiah.</string>
    <string name="convert">Konversi</string>
    <string name="header">Konversi Mata Uang</string>
    <string name="nominal_invalid">Nominal tidak boleh kosong.</string>
    <string name="message">%1$s diklik!</string>

    <string name="masukkan_nominal">Masukkan Nominal</string>
    <string name="to">to</string>
    <string name="rupiah">Rupiah</string>
    <string name="resetNominal">RESET</string>
    <string name="konvert">Konvert</string>

    <string name="lihatKurs">LIHAT KURS</string>
    <string name="copyright">Aplikasi Konversi Mata Uang Rupiah adalah sebuah aplikasi Android yang memungkinkan pengguna untuk mengkonversi nilai mata uang Rupiah ke Dollar atau Euro. Aplikasi ini dirancang untuk memberikan kemudahan dalam melakukan konversi mata uang secara akurat dan efisien. \n\nAplikasi ini dibuat untuk memenuhi tugas kelas Mobpro 1. \n\nCopyright © 2023 Aria Muhammad Luthfi.\nAll rights reserved.</string>

    <string name="share">BAGIKAN</string>

    <string name="kurs_dollar">Kurs Dollar saat ini \n\n1 Dolar Amerika Serikat sama dengan 15.059,00 Rupiah</string>
    <string name="kurs_euro">Kurs Euro saat ini \n\n1 Euro sama dengan 16.371,00 Rupiah</string>
    <string name="dollar_desc">Dollar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan_template">Mata Uang: %1$s \nNominal Rupiah: %2$s </string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="uang">List Mata Uang</string>

    <string-array name="mataUang">
        <item>Dollar</item>
        <item>Euro</item>
    </string-array>

    <string name="kurs_x">Rupiah: %1$.0f -> %2$s</string>
    <string name="hasil_x">Hasil Konversi: %1$.1f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="buttonHapusData">Hapus</string>
    <string name="konfirmasi_hapus_satu">Konfirmasi Hapus</string>
    <string name="koneksi_error">Koneksi error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data mata uang otomatis</string>
    <string name="notif_title">Kurs mata uang sudah diperbarui!</string>
    <string name="notif_text">Cek kurs sekarang juga..</string>
</resources>