<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if3152.riconvert.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_kursFragment"
            app:destination="@id/kursFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_matauangFragment"
            app:destination="@id/matauangFragment" />
    </fragment>
    <fragment
        android:id="@+id/kursFragment"
        android:name="org.d3if3152.riconvert.ui.KursFragment"
        tools:layout="@layout/fragment_kurs">
        <action
            android:id="@+id/action_kursFragment_to_hitungFragment"
            app:destination="@id/hitungFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3152.riconvert.ui.AboutFragment"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if3152.riconvert.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
    <fragment
        android:id="@+id/matauangFragment"
        android:name="org.d3if3152.riconvert.ui.matauang.MataUangFragment"
        android:label="@string/uang"
        tools:layout="@layout/fragment_uang" />
</navigation>